# hs-ffmpeg

./: .gitignore  configure  configure.ac  deps.txt  hs-ffmpeg.buildinfo.in  hs-ffmpeg.cabal
src/: config.h.in  ffmpeg.h  macros.hsc2hs.h
src/Media/: FFMpeg.hs
src/Media/FFMpeg/: Codec.hsc  CodecEnums_.hsc  Common.hsc  Format.hsc  SWScale.hsc  SWScaleEnums_.hsc  Util.hsc  UtilEnums_.hsc  _c_utils.c
src/Media/FFMpeg/Codec/: AVFrame.hsc  AVPacket.hsc  AVPacketSideData.hsc  AVPicture.hsc  Core.hsc  Decoding.hsc  Encoding.hsc  Enums.hsc  Fields.hsc  Names.hs
src/Media/FFMpeg/Format/: AVIO.hsc  Core.hsc  Demuxing.hsc  Enums.hsc  Fields.hsc  Muxing.hsc  Names.hs
src/Media/FFMpeg/Internal/: Common.hsc
src/Media/FFMpeg/SWScale/: Core.hsc  Enums.hsc  Names.hs
src/Media/FFMpeg/Util/: AVFrame.hsc  AVFrameSideData.hsc  AVPicture.hsc  Buffer.hsc  ChannelLayout.hsc  Classes.hsc  Dict.hsc  Enums.hsc  Error.hsc  Maths.hsc  Options.hsc
