name:           hs-ffmpeg
version:        0.4.0.0
cabal-version:  >= 1.6
license:        BSD3
author:         Vasyl Pasternak
synopsis:       Bindings to FFMPEG library
maintainer:     
description:    Bindings to FFMPEG library
copyright:      (c) Vasyl Pasternak, 2009
                    Callum Lowcay, 2015
homepage:       https://github.com/CLowcay/hs-ffmpeg
bug-reports:    https://github.com/CLowcay/hs-ffmpeg/issues
stability:      alpha
category:       Media

build-type:     Configure
extra-source-files: src/config.h.in
                    src/ffmpeg.h
                    configure
                    configure.ac
                    hs-ffmpeg.buildinfo.in

library
        build-depends:   base >= 4.7 && < 4.8, bytestring
        hs-source-dirs:  src
        include-dirs:    src
        exposed-modules: Media.FFMpeg
                         Media.FFMpeg.Codec
                         Media.FFMpeg.Codec.Enums
                         Media.FFMpeg.Format
                         Media.FFMpeg.SWScale
                         Media.FFMpeg.SWScale.Enums
                         Media.FFMpeg.Util
                         Media.FFMpeg.Util.Enums
        other-modules:   Media.FFMpeg.Common
        c-sources:       src/Media/FFMpeg/_c_utils.c
        default-language:    Haskell2010

