name:           hs-ffmpeg
version:        0.4.0.0
cabal-version:  >= 1.10
license:        BSD3
author:         Vasyl Pasternak
synopsis:       Bindings to FFMPEG library
maintainer:     
description:    Bindings to FFMPEG library
copyright:      (c) Vasyl Pasternak, 2009
                    Callum Lowcay, 2015
homepage:       https://github.com/CLowcay/hs-ffmpeg
bug-reports:    https://github.com/CLowcay/hs-ffmpeg/issues
stability:      alpha
category:       Media

build-type:     Configure
extra-source-files: src/config.h.in
                    src/ffmpeg.h
                    configure
                    configure.ac
                    hs-ffmpeg.buildinfo.in

library
        build-depends:   base >= 4.7 && < 4.8, bytestring, mtl >= 2.2, transformers >= 0.3
        hs-source-dirs:  src
        include-dirs:    src
        exposed-modules: Media.FFMpeg
                         Media.FFMpeg.Codec
                         Media.FFMpeg.Codec.AVPacket
                         Media.FFMpeg.Codec.AVPacketSideData
                         Media.FFMpeg.Codec.AVPicture
                         Media.FFMpeg.Codec.Core
                         Media.FFMpeg.Codec.Decoding
                         Media.FFMpeg.Codec.Encoding
                         Media.FFMpeg.Codec.Enums
                         Media.FFMpeg.Format
                         Media.FFMpeg.Format.Demuxing
                         Media.FFMpeg.Format.Muxing
                         Media.FFMpeg.Internal.Common
                         Media.FFMpeg.SWScale
                         Media.FFMpeg.SWScale.Enums
                         Media.FFMpeg.Util
                         Media.FFMpeg.Util.AVFrame
                         Media.FFMpeg.Util.AVFrameSideData
                         Media.FFMpeg.Util.Buffer
                         Media.FFMpeg.Util.ChannelLayout
                         Media.FFMpeg.Util.Dict
                         Media.FFMpeg.Util.Enums
        other-modules:   
        c-sources:       src/Media/FFMpeg/_c_utils.c
        default-language:    Haskell2010

