name:           hs-ffmpeg
version:        0.4.0.0
cabal-version:  >= 1.10
license:        BSD3
author:         Vasyl Pasternak
synopsis:       Bindings to FFMPEG library
maintainer:     
description:    Bindings to FFMPEG library
copyright:      (c) Vasyl Pasternak, 2009
                    Callum Lowcay, 2015
homepage:       https://github.com/CLowcay/hs-ffmpeg
bug-reports:    https://github.com/CLowcay/hs-ffmpeg/issues
stability:      alpha
category:       Media

build-type:     Configure
extra-source-files: src/config.h.in
                    src/ffmpeg.h
                    configure
                    configure.ac
                    hs-ffmpeg.buildinfo.in

library
        build-depends:   base >= 4.7 && < 4.8, bytestring, mtl >= 2.2 && < 2.3, transformers >= 0.3 && < 0.5, containers >= 0.5 && < 0.6, exceptions >= 0.8 && < 0.9
        hs-source-dirs:  src
        include-dirs:    src
        exposed-modules: Media.FFMpeg
                         Media.FFMpeg.Codec
                         Media.FFMpeg.Codec.AVPacket
                         Media.FFMpeg.Codec.AVPacketSideData
                         Media.FFMpeg.Codec.AVPicture
                         Media.FFMpeg.Codec.Core
                         Media.FFMpeg.Codec.Decoding
                         Media.FFMpeg.Codec.Encoding
                         Media.FFMpeg.Codec.Enums
                         Media.FFMpeg.Codec.Fields
                         Media.FFMpeg.Codec.Names
                         Media.FFMpeg.Format
                         Media.FFMpeg.Format.AVIO
                         Media.FFMpeg.Format.Core
                         Media.FFMpeg.Format.Demuxing
                         Media.FFMpeg.Format.Enums
                         Media.FFMpeg.Format.Fields
                         Media.FFMpeg.Format.Muxing
                         Media.FFMpeg.Format.Names
                         Media.FFMpeg.Internal.Common
                         Media.FFMpeg.SWScale
                         Media.FFMpeg.SWScale.Core
                         Media.FFMpeg.SWScale.Enums
                         Media.FFMpeg.SWScale.Names
                         Media.FFMpeg.Util
                         Media.FFMpeg.Util.AVFrame
                         Media.FFMpeg.Util.AVFrameSideData
                         Media.FFMpeg.Util.Buffer
                         Media.FFMpeg.Util.ChannelLayout
                         Media.FFMpeg.Util.Dict
                         Media.FFMpeg.Util.Enums
                         Media.FFMpeg.Util.Error
                         Media.FFMpeg.Util.Maths
                         Media.FFMpeg.Util.Options
        other-modules:   
        pkgconfig-depends: libavutil, libavformat, libavcodec, libswscale
        c-sources:       src/Media/FFMpeg/_c_utils.c
        default-language:    Haskell2010

